Revision history for DBIx-Squirrel

1.3.5 2024-08-26 07:40

-   Fixed a problem recently introduced into how transformation
    pipelines and arguments are partitioned.
-   Fixed the iterator execute method. It used the bleat about missing
    bind- values, but that doesn’t make sense during construction when
    there might legitimately be none. Now calling execute with none of
    the expected bind-values just effectively resets the iterator.
-   Fixed the results code that was breaking due to a missing
    no strict qw/refs/.

1.3.4 2024-08-25 18:30

-   Some refactoring to improve robustness.

1.3.3 2024-08-25 18:15

-   Typos fixed and additions made to POD.
-   Tests no longer jump through hoops to open the SQLite test database
    in read-only mode. I only tried that to see if it would have a
    positive effect on tests segfaulting. I have since simplified
    testing a great deal since the rewrites, so pushing out this release
    to see if it mops-up a couple of red boxes on CPANTs.

1.3.2 2024-08-25 16:45

-   Fixed typos.
-   General improvements and optimisations.
-   Strawberry Perl 5.10.1.1 on MSWin32-x86-multi-thread can’t seem to
    import DBD::SQLite::Constants ‘:file_open’ because is isn’t
    exported. Hopefully, a conditionally workaround solves the issue.
-   Strawberry Perl 5.14.4.1 on MSWin32-x86-multi-thread gives /Can’t
    locate object method “e” via package “warnings”/ error. Added “use
    diagnostics” pragma to all test code in an attempt to coax more
    useful information out.
-   Fixed broken iterator “buffer_size” code - manually set sizes
    weren’t persistent.

1.3.1 2024-08-24 14:10

-   General code improvements.
-   Removed unnecessary imports.
-   Removed call to no longer extant iterator method from
    &DBIx::Squirrel::it::DESTROY.
-   Added the “count_all” method back into the iterator class, as well
    as ensuring that “count” does not affect a future call to “next”.